--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
-    "react-spring": "^9.7.3"
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
